<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/tv_sec_per_move"
            android:text="@string/str_sec_per_move"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginTop="66dp"
            app:layout_constraintTop_toBottomOf="@+id/settings_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/et_sec_per_move"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="45dp"/>
    <EditText
            android:id="@+id/et_sec_per_move"
            android:text="@string/default_sec_per_move"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:maxLength="2"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/settings_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="45dp"
            android:hint="@string/hint_sec_per_move"
            android:autofillHints="@string/hint_sec_per_move"/>


    <TextView
            android:id="@+id/tv_color_p1"
            android:text="@string/str_color_p1"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_sec_per_move"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/et_color_p1"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="43dp"
            android:layout_height="19dp"
            android:layout_marginStart="45dp"/>
    <EditText
            android:id="@+id/et_color_p1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/default_color_p1"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/et_sec_per_move"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="45dp"
            android:autofillHints="@string/hint_color_p1"
            android:hint="@string/hint_color_p1"/>


    <TextView
            android:id="@+id/tv_color_p2"
            android:text="@string/str_color_p2"
            android:layout_width="0dp"
            android:layout_height="19dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_color_p1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/et_color_p2"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="42dp" android:layout_marginStart="45dp"/>
    <EditText
            android:id="@+id/et_color_p2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/default_color_p2"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/et_color_p1"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="45dp"
            android:autofillHints="@string/hint_color_p2"
            android:hint="@string/hint_color_p2"/>


    <TextView
            android:id="@+id/tv_symbol_p1"
            android:text="@string/str_symbol_p1"
            android:layout_width="0dp"
            android:layout_height="19dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_color_p2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/et_symbol_p1"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="43dp" android:layout_marginStart="45dp"/>
    <EditText
            android:id="@+id/et_symbol_p1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/default_symbol_p1"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/et_color_p2"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="45dp"
            android:autofillHints="@string/hint_symbol_p1"
            android:hint="@string/hint_symbol_p1"/>


    <TextView
            android:id="@+id/tv_symbol_p2"
            android:text="@string/str_symbol_p2"
            android:layout_width="0dp"
            android:layout_height="19dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_symbol_p1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/et_symbol_p2"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="42dp" android:layout_marginStart="45dp"/>
    <EditText
            android:id="@+id/et_symbol_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/default_symbol_p2"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/et_symbol_p1"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="45dp"
            android:autofillHints="@string/hint_symbol_p2"
            android:hint="@string/hint_symbol_p2"/>


    <TextView
            android:id="@+id/tv_board_size"
            android:text="@string/str_board_size"
            android:layout_width="0dp"
            android:layout_height="19dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_symbol_p2"
            app:layout_constraintEnd_toStartOf="@+id/et_board_size"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="43dp" android:layout_marginStart="45dp"/>
    <EditText
            android:id="@+id/et_board_size"
            android:text="@string/default_board_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:maxLength="2"
            app:layout_constraintTop_toBottomOf="@+id/et_symbol_p2"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="45dp"
            android:hint="@string/hint_board_size"/>

</androidx.constraintlayout.widget.ConstraintLayout>