<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:text="@string/str_start"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/btn_start_stop"
            app:layout_constraintTop_toBottomOf="@+id/main_toolbar" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            android:background="@drawable/drw_button_startstop_background"/>
    <TextView
            android:text="@string/str_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_player_msg"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_stop" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            android:scaleX="3"
            android:scaleY="3"/>
    <TextView
            android:text="@string/str_sym_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_symbol_player1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_player_msg"
            android:layout_marginTop="12dp"
            android:background="@drawable/drw_player_indicator_background"
            app:layout_constraintEnd_toStartOf="@id/tv_symbol_player2"
            android:gravity="center"/>
    <TextView
            android:text="@string/str_sym_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_symbol_player2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_player_msg"
            android:layout_marginTop="12dp"
            android:background="@drawable/drw_player_indicator_background"
            app:layout_constraintStart_toEndOf="@+id/tv_symbol_player1"
            android:gravity="center"/>
    <TextView
            android:text="@string/str_game_timer"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:id="@+id/tv_game_timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/sv_game_board_container"
            app:layout_constraintTop_toBottomOf="@id/tv_symbol_player1"
            android:scaleX="3"
            android:scaleY="3" android:layout_marginTop="12dp"/>

    <ScrollView
            android:id="@+id/sv_game_board_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_game_timer"
            app:layout_constraintBottom_toTopOf="@+id/tv_result_msg"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:fillViewport="true">
    <HorizontalScrollView
            android:id="@+id/hsv_game_board_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/sv_game_board_container"
            app:layout_constraintBottom_toTopOf="@+id/sv_game_board_container"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:fillViewport="true">

        <LinearLayout
                android:id="@+id/ll_game_board"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/hsv_game_board_container"
                app:layout_constraintTop_toTopOf="@+id/hsv_game_board_container"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"/>

    </HorizontalScrollView>
    </ScrollView>

    <TextView
            android:text="@string/default_result_msg"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:id="@+id/tv_result_msg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_game_board_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:scaleX="3"
            android:scaleY="3"/>


</androidx.constraintlayout.widget.ConstraintLayout>